[gd_scene load_steps=4 format=3 uid="uid://bjavfnjeecqd8"]

[ext_resource type="Script" uid="uid://d0s5umv08rvb4" path="res://Tests/Websockets_connections/web_sockets_connection.gd" id="1_pa6a7"]
[ext_resource type="Script" uid="uid://dfd8qbdo70dyq" path="res://Tests/Websockets_connections/parser.gd" id="2_5p8n4"]
[ext_resource type="PackedScene" uid="uid://ckl5qb2o0dv3b" path="res://Ui/BattleInput.tscn" id="3_akr4m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pa6a7")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = 52.0
offset_right = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="MainContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Send"

[node name="RichTextLabel" type="RichTextLabel" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Parser" type="Node" parent="."]
script = ExtResource("2_5p8n4")

[node name="BattleInput" parent="." instance=ExtResource("3_akr4m")]
layout_mode = 1

[connection signal="pressed" from="MainContainer/Button" to="." method="_on_button_pressed"]
